<resources>
    <string name="app_name">Idle Texter</string>
    <string name="app_link">com.centafrique.idletexter</string>

    <string name="hyperlink">https://play.google.com/store/apps/details?id=com.centafrique.idletexter</string>

    <string name="send_text_default">Thank you for contacting me. Please leave a message I will get back to you as soon as possible.</string>
    <string name="send_text">Thank you for contacting Nimo Naturals. Please leave a message on one of our platforms and we will get back to you as soon as possible.</string>
    <string name="send_text_maina">You attempted to call Dave but I could not receive your call. I will call you as soon as possible. Keep safe.</string>

    <string name="silver">Silver \nPayment Plan</string>
    <string name="bronze">Bronze \nPayment Plan</string>
    <string name="gold">Gold \nPayment Plan</string>
    <string name="premium">Premium \nPayment Plan</string>

    <string name="adId">ca-app-pub-2341333181404752~8269634420</string>

    <string name="payment_instructions">1. Go to the M-pesa Menu.\n
    2. Select Send money.\n
    3. Enter Phone number +254 716 060198.\n
    4. Enter the Amount.\n
    5. Enter your M-Pesa PIN then send.</string>

    <string name="mpesa_base_url">https://uptechpay.com/api/</string>

    <string name="mpesa_base_token">/oauth/v1/</string>

    <string name="mpesa_base_lipa_mpesa">mpesa/stkpush/v1/</string>

    <string name="silver_plan">Get 500 sms for 200 Kshs</string>
    <string name="bronze_plan">Get 750 sms for 500 Kshs</string>
    <string name="gold_plan">Get 1000 sms for 750 Kshs</string>
    <string name="premium_plan">Get 1200 sms + 500 free sms for 1000 Kshs</string>

</resources>
