<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Payment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"
                        android:background="@drawable/ic_action_silver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:text="@string/silver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/silver_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorTrans"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"
                        android:background="@drawable/ic_action_bronze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorBronze"
                        android:gravity="center"
                        android:text="@string/bronze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@color/colorBronze"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/bronze_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorTrans"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"
                        android:background="@drawable/ic_action_gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorGold"
                        android:gravity="center"
                        android:text="@string/gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@color/colorGold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/gold_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>


                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorTrans"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"
                        android:background="@drawable/ic_action_premium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorPremium"
                        android:gravity="center"
                        android:text="@string/premium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@color/colorPremium"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/premium_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorTrans"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_gravity="center"
                    android:text="Payment Instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorTrans"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>


                <TextView
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center"
                    android:text="@string/payment_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:singleLine="true"
                    android:drawableStart="@drawable/ic_action_card"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_outline2"
                    android:id="@+id/etMpesaCode"
                    android:hint=" MPESA CODE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:drawableEnd="@drawable/ic_action_done"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/round_outline"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:id="@+id/btnActivatePlan"
                    android:text="Send code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>